--- a/index.html
+++ b/index.html
@@ -1,19 +1,60 @@
+<!-- Doctype HTML5 -->
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>Test Page</title>
+<html lang="en">
 
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <!--meta http-equiv="X-UA-Compatible" content="IE-edge"-->
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <title>Assignment Portal Page</title>
+    <meta name="description" content="Godwin Iyip Assignment Portal for WDD 230">
+    <link href="css/main.css" rel="stylesheet">
+</head>
+
 <body>
-    <h1>Testing</h1>
-    <P>
-        This is the beginning
-    </P>
+    <header>
+        <img src="/images/20211219_204855.jpg" alt="Godwin Iyip" >
+        <h1>Godwin Iyip</h1>
+    </header>
+    <!--nav>
+      <ul>
+          <li>Lesson 02: <a href="">Title</a></li>
+          <li>Lesson 03: <a href="">Title</a></li>
+          <li>Lesson 04: <a href="">Title</a></li>
+          <li>Lesson 05: <a href="">Title</a></li>
+          <li>Lesson 06: <a href="">Title</a></li>
+          <li>Lesson 07: <a href="">Title</a></li>
+          <li>Lesson 08: <a href="">Title</a></li>
+          <li>Lesson 09: <a href="">Title</a></li>
+          <li>Lesson 10: <a href="">Title</a></li>
+          <li>Lesson 11: <a href="">Title</a></li>
+      </ul> 
+   </nav-->
+    <main>
+        <section>
+            <h2>WDD 230: Assignment Portal</h2>
+            <nav>
+                <ul>
+                    <li>Lesson 02: <a href="">Title</a></li>
+                    <li>Lesson 03: <a href="">Title</a></li>
+                    <li>Lesson 04: <a href="">Title</a></li>
+                    <li>Lesson 05: <a href="">Title</a></li>
+                    <li>Lesson 06: <a href="">Title</a></li>
+                    <li>Lesson 07: <a href="">Title</a></li>
+                    <li>Lesson 08: <a href="">Title</a></li>
+                    <li>Lesson 09: <a href="">Title</a></li>
+                    <li>Lesson 10: <a href="">Title</a></li>
+                    <li>Lesson 11: <a href="">Title</a></li>
+                </ul>
+            </nav>
+            <p><em>some lessons may need more than one activity/assignment links</em></p>
+        </section>
+    </main>
     <footer>
-        Hello World
+        &copy; 2022 | Godwin Iyip | Nigeria | 
+        Last Updated: <span id="currentdate"></span>
     </footer>
+    <script src="js/currentdate.js"></script>
 </body>
+
 </html>
