--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="/images/20211219_204855.jpg" alt="Godwin Iyip" >
+        <img src="images/20211219_204855.jpg" alt="Godwin Iyip" >
         <h1>Godwin Iyip</h1>
     </header>
     <!--nav>
