Updated my code by adding some css propertise

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </section>
     </main>
     <footer>
-        &copy; 2022 | Godwin Iyip | Nigeria | 
-        Last Updated: <span id="currentdate"></span>
+        &copy; 2022 .:|:. Godwin Iyip .:|:. Nigeria 
+        <p>Last Updated: <span id="currentdate"></span></p>
     </footer>
     <script src="js/currentdate.js"></script>
 </body>
