--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!-- Doctype HTML5 -->
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <!--meta http-equiv="X-UA-Compatible" content="IE-edge"-->
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
     <title>Assignment Portal Page</title>
-    <meta name="description" content="Godwin Iyip Assignment Portal for WDD 230">
-    <link href="css/main.css" rel="stylesheet">
-</head>
+    <meta
+      name="description"
+      content="Godwin Iyip Assignment Portal for WDD 230"
+    />
+    <link href="css/main.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="images/20211219_204855.jpg" alt="Godwin Iyip" >
-        <h1>Godwin Iyip</h1>
+      <img src="images/20211219_204855.jpg" alt="Godwin Iyip" />
+      <h1>Godwin Iyip</h1>
     </header>
     <!--nav>
       <ul>
@@ -31,30 +33,31 @@
       </ul> 
    </nav-->
     <main>
-        <section>
-            <h2>WDD 230: Assignment Portal</h2>
-            <nav>
-                <ul>
-                    <li>Lesson 02: <a href="">Title</a></li>
-                    <li>Lesson 03: <a href="">Title</a></li>
-                    <li>Lesson 04: <a href="">Title</a></li>
-                    <li>Lesson 05: <a href="">Title</a></li>
-                    <li>Lesson 06: <a href="">Title</a></li>
-                    <li>Lesson 07: <a href="">Title</a></li>
-                    <li>Lesson 08: <a href="">Title</a></li>
-                    <li>Lesson 09: <a href="">Title</a></li>
-                    <li>Lesson 10: <a href="">Title</a></li>
-                    <li>Lesson 11: <a href="">Title</a></li>
-                </ul>
-            </nav>
-            <p><em>some lessons may need more than one activity/assignment links</em></p>
-        </section>
+      <section>
+        <h2>WDD 230: Assignment Portal</h2>
+        <nav>
+          <ul>
+            <li>Lesson 02: <a href="">Title</a></li>
+            <li>Lesson 03: <a href="">Title</a></li>
+            <li>Lesson 04: <a href="">Title</a></li>
+            <li>Lesson 05: <a href="">Title</a></li>
+            <li>Lesson 06: <a href="">Title</a></li>
+            <li>Lesson 07: <a href="">Title</a></li>
+            <li>Lesson 08: <a href="">Title</a></li>
+            <li>Lesson 09: <a href="">Title</a></li>
+            <li>Lesson 10: <a href="">Title</a></li>
+            <li>Lesson 11: <a href="">Title</a></li>
+          </ul>
+        </nav>
+        <p>
+          <em>some lessons may need more than one activity/assignment links</em>
+        </p>
+      </section>
     </main>
     <footer>
-        &copy; 2022 .:|:. Godwin Iyip .:|:. Nigeria 
-        <p>Last Updated: <span id="currentdate"></span></p>
+      &copy; 2022 .:|:. Godwin Iyip .:|:. Nigeria
+      <p>Last Updated: <span id="currentdate"></span></p>
     </footer>
     <script src="js/currentdate.js"></script>
-</body>
-
+  </body>
 </html>
