--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="description" content="Godwin Iyip Assignment Portal for WDD 230" />
   <link rel="stylesheet" href="css/normalize.css">
   <link href="css/main.css" rel="stylesheet" />
+  <link href="css/medium.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Satisfy&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,20 +21,7 @@
     <img src="images/20211219_204855.jpg" alt="Godwin Iyip" />
     <h1>Godwin Iyip</h1>
   </header>
-  <!--nav>
-      <ul>
-          <li>Lesson 02: <a href="">Title</a></li>
-          <li>Lesson 03: <a href="">Title</a></li>
-          <li>Lesson 04: <a href="">Title</a></li>
-          <li>Lesson 05: <a href="">Title</a></li>
-          <li>Lesson 06: <a href="">Title</a></li>
-          <li>Lesson 07: <a href="">Title</a></li>
-          <li>Lesson 08: <a href="">Title</a></li>
-          <li>Lesson 09: <a href="">Title</a></li>
-          <li>Lesson 10: <a href="">Title</a></li>
-          <li>Lesson 11: <a href="">Title</a></li>
-      </ul> 
-   </nav-->
+  
   <main>
     <section>
       <h2>WDD 230: Assignment Portal</h2>
@@ -49,7 +40,7 @@
         </ul>
       </nav>
       <p>
-        <em>some lessons may need more than one activity/assignment links</em>
+        some lessons may need more than one activity/assignment links
       </p>
     </section>
   </main>
