--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Assignment Portal Page</title>
   <meta name="description" content="Godwin Iyip Assignment Portal for WDD 230" />
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="css/main.css" rel="stylesheet" />
+  <link href="css/small.css" rel="stylesheet" />
   <link href="css/medium.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
       <h2>WDD 230: Assignment Portal</h2>
       <nav>
         <ul>
-          <li>Lesson 02: <a href="">Title</a></li>
+          <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
           <li>Lesson 03: <a href="">Title</a></li>
           <li>Lesson 04: <a href="">Title</a></li>
           <li>Lesson 05: <a href="">Title</a></li>
