--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <h2>WDD 230: Assignment Portal</h2>
       <nav>
         <ul>
-          <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-          <li>Lesson 03: <a href="">Title</a></li>
+          <li>Lesson 02: <a href="lesson2/design-principles.html" target="_blank">Design Principles</a></li>
+          <li>Lesson 03: <a href="lesson3/index.html" target="_blank"> Website Planning Documentation </a></li>
           <li>Lesson 04: <a href="">Title</a></li>
           <li>Lesson 05: <a href="">Title</a></li>
           <li>Lesson 06: <a href="">Title</a></li>
