Made some corrections

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -33,9 +33,9 @@
             <p> The target audience of the <strong>MainLandvalley.com</strong> web site is described below</p>
             <ul>
                 <li> <strong>Who:</strong> Various business owners in the MainLand valley, aspiring business owners, businesses that wants to relocate to the MainLand valley, residents of the MainLand valley, tourist and other people from every walks of life.</li>
-                <br>
+                
                 <li><strong> Age:</strong> The <strong>MainLandvalley.com</strong> website has no age limit. As long as you are able to surf the internet, this website is for you.</li>
-                <br>
+                
                 <li><strong>Motivation:</strong> Help various business owners to connect with each other, provide a brief information about the weather and the businesses in the MainLand valley. Help residents navigate through different businesses in the area.
                 </li>
             </ul>
@@ -75,10 +75,7 @@
             <p id="last">Last updated</p>
             <p id="demo"></p>
 
-            <script>
-                const d = new Date();
-                document.getElementById("demo").innerHTML = d;
-            </script>
+            <script src="js/main.js"></script>
 
         </footer>
 
