--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -52,10 +52,7 @@
             <p id="last">Last updated</p>
             <p id="demo"></p>
 
-            <script>
-                const d = new Date();
-                document.getElementById("demo").innerHTML = d;
-            </script>
+            <script src="js/main.js"></script>
 
         </footer>
 
