--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -53,10 +53,7 @@
         <p id="Iyip">&copy; 2022 | Godwin Iyip | Last Updated </p>
         <p id="demo"></p>
 
-        <script>
-            const d = new Date();
-            document.getElementById("demo").innerHTML = d;
-        </script>
+        <script src="js/date.js"></script>
     </footer>
 
 </body>
