--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="description" content="MainLand Valley chamber of commerce home page">
+    <title>MainLand Valley</title>
+    <link rel="shortcut icon" type="image/png" href="images/hd4/1.png" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Satisfy&family=Ubuntu&display=swap">
 </head>
+
 <body>
-  
+    <header class="header-grid">
+        <div class="logo-info"><img class="logo-img" src="images/hd4/1.png" alt="MainLand Valley chamber logo">
+            <div id="name">
+                <h1>MainLand Valley</h1>
+                <h2>Chamber of Commerce</h2>
+            </div>
+        </div>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/godwin-iyip/" target="_blank"><img src="images/linkedin.jpg" alt="linkedin icon"></a>
+            <a href="https://mobile.twitter.com/IyipGodwin/" target="_blank"><img src="images/twitter.png" alt="Twitter icon"></a>
+        </div>
+        <button id="nav-btn"><span>&#9776</span><span>X</span></button>
+        <nav>
+            <ul id="navUl">
+                <li><a href="#">Discover</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div id="header-date">
+            <!-- JS! -->
+        </div>
+    </header>
+    <main>
+        <div class="placeholder-item hero">Hero with site name and call to action</div>
+        <div class="placeholder-item event">Event</div>
+        <div class="placeholder-item weather">Weather</div>
+        <div class="placeholder-item join">join</div>
+        <div class="placeholder-item news">News Release</div>
+        <div class="placeholder-spotlights">
+            <div class="spotlight">Spotlight 1</div>
+            <div class="spotlight">Spotlight 2</div>
+            <div class="spotlight">Spotlight 3</div>
+        </div>
+    </main>
+    <footer>
+        <div class="first-half">
+            <div class="first-half-1">
+                <img class="footer-logo logo-img" src="images/hd4/1.png" alt="MainLand Valley logo">
+                <h2>MainLand Valley Chamber</h2>
+                <span id="address">No. 22, Mosa fun-eto Street, Oke-Ata, Abeokuta, Ogun State 10231</span>
+            </div>
+            <div class="first-half-2">
+                <span id="email">info@MainLandValley.org</span>
+                <span id="phone">+(234) 809 733 5444</span>
+                <span id="map">📍 Location Map</span>
+            </div>
+        </div>
+        <hr>
+        <div class="second-half">
+            <span id="footer-year">
+                <!-- JS! -->
+            </span>
+            <h2>Godwin Iyip</h2>
+            <span>WDD 230 Project</span>
+            <span class="last-modification">
+            </span>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
