--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Satisfy&family=Ubuntu&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Satisfy&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,10 @@
             <a href="https://www.linkedin.com/in/godwin-iyip/" target="_blank"><img src="images/linkedin.jpg" alt="linkedin icon"></a>
             <a href="https://mobile.twitter.com/IyipGodwin/" target="_blank"><img src="images/twitter.png" alt="Twitter icon"></a>
         </div>
-        <button id="nav-btn"><span>&#9776</span><span>X</span></button>
+        <button id="nav-btn">
+            <span>&#9776;</span>
+            <span>X</span>
+        </button>
         <nav>
             <ul id="navUl">
                 <li><a href="#">Discover</a></li>
