--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="description" content="MainLand Valley chamber of commerce home page">
     <title>MainLand Valley</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="shortcut icon" type="image/png" href="images/hd4/1.png" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
