--- a/book-of-mormon/bom.html
+++ b/book-of-mormon/bom.html
@@ -16,7 +16,8 @@
 </head>
 
 <body id="content">
-    <section>
+    <main>
+        <section>
         <h1><img src="images/bom3.jpg" alt="Book of Mormon" width="25" height="25"> Book of Mormon - Top25</h1>
         <div>
             <label for="fav">Enter Book and Chapter</label>
@@ -26,6 +27,7 @@
 
         <ul id="favList"></ul>
     </section>
+    </main>
 
     <script src="js/bom.js"></script>
 </body>
