--- a/book-of-mormon/bom.html
+++ b/book-of-mormon/bom.html
@@ -18,7 +18,7 @@
 <body id="content">
     <main>
         <section>
-        <h1><img src="images/bom3.jpg" alt="Book of Mormon" width="25" height="25"> Book of Mormon - Top25</h1>
+        <h1><img src="images/bom3.jpg" alt="BOM" width="25" height="25"> Book of Mormon - Top25</h1>
         <div>
             <label for="fav">Enter Book and Chapter</label>
             <input name="fav" id="fav" />
