--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!--meta http-equiv="X-UA-Compatible" content="IE-edge"-->
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
   <title>Assignment Portal Page</title>
+  <link rel="shortcut icon" href="Giyip.ico">
   <meta name="description" content="Godwin Iyip Assignment Portal for WDD 230" />
   <link rel="stylesheet" href="css/normalize.css">
   <link href="css/small.css" rel="stylesheet" />
