--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li>Lesson 02: <a href="lesson2/design-principles.html" target="_blank">Design Principles</a></li>
           <li>Lesson 03: <a href="lesson3/index.html" target="_blank"> Website Planning Documentation </a></li>
           <li>Lesson 04: <a href="chamber/index.html" target="_blank">Chamber Home Page Build</a></li>
-          <li>Lesson 05: <a href="book-of-mormon/bom.html" target="_blank">Book of Mormon</a> | <a href="#" target="_blank">Chamber Home Page Continued</a></li>
+          <li>Lesson 05: <a href="book-of-mormon/bom.html" target="_blank">Book of Mormon</a> | <a href="chamber/index.html" target="_blank">Chamber Home Page Continued</a></li>
           <li>Lesson 06: <a href="">Title</a></li>
           <li>Lesson 07: <a href="">Title</a></li>
           <li>Lesson 08: <a href="">Title</a></li>
