--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,15 +47,55 @@
         </div>
     </header>
     <main>
-        <div class="placeholder-item hero">Hero with site name and call to action</div>
-        <div class="placeholder-item event">Event</div>
-        <div class="placeholder-item weather">Weather</div>
-        <div class="placeholder-item join">join</div>
-        <div class="placeholder-item news">News Release</div>
-        <div class="placeholder-spotlights">
-            <div class="spotlight">Spotlight 1</div>
-            <div class="spotlight">Spotlight 2</div>
-            <div class="spotlight">Spotlight 3</div>
+        <div class="block hero">
+            <h2>Welcome to the <span>MainLand Valley</span></h2>
+            <button>Join the Chamber</button>
+        </div>
+        <div class="block event sub">
+            <h2>Ribbon Cutting</h2>
+            <h3>Mays Place</h3>
+            <p>Join us for the grand opening of Mays Place, Thursday at 5:00p.m</p>
+        </div>
+        <div class="block weather sub">
+            <h2>Weather</h2>
+            <img src="images/sunny.png" alt="sunny icon">
+            <h3>28 °C</h3>
+            <hr>
+            <p>Wind Speed:<span>2.5 km/h</span></p>
+            <p>Wind Chill:<span>N/A</span></p>
+        </div>
+        <div class="block join">
+            <button>Join Us!</button>
+            <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
+        </div>
+        <div class="block news sub">
+            <h2>News Release</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla doloribus, eveniet eius sapiente, corporis
+                delectus amet, minima provident voluptas harum adipisci est labore veritatis sed assumenda dolor. Voluptatem ea
+                nostrum, dolores ipsam .
+            </p>
+        </div>
+        <div class="placeholder-spotlights" id="spotlights">
+            <div class="spotlight">
+                <h2>Whiz Tech</h2>
+                <img src="images/wizTech.jpg" alt="Whiz Tech logo">
+                <hr>
+                <p>info@whizTech.com</p>
+                <p>+234 123 -1234 | Website</p>
+            </div>
+            <div class="spotlight">
+                <h2>Jays Health</h2>
+                <img src="images/jayhealth.png" alt="Health logo">
+                <hr>
+                <p>info@jayshealth.com</p>
+                <p>+234 123 -1234 | Website</p>
+            </div>
+            <div class="spotlight spot-3" id="spot-3">
+                <h2>Mays Place</h2>
+                <img src="images/mays.jpg" alt="food logo">
+                <hr>
+                <p>info@maysplace.com</p>
+                <p>+234 123 -1234 | Website</p></div>
         </div>
     </main>
     <footer>
