--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,6 +45,7 @@
         <div id="header-date">
             <!-- JS! -->
         </div>
+        <div class="banner hide"><p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p></div>
     </header>
     <main>
         <div class="block hero">
