--- a/book-of-mormon/bom.html
+++ b/book-of-mormon/bom.html
@@ -20,7 +20,7 @@
         <section>
         <h1><img src="images/bom3.jpg" alt="BOM" width="25" height="25"> Book of Mormon - Top25</h1>
         <div>
-            <label for="fav">Enter Book and Chapter</label>
+            <label for="fav">Enter Book and Chapter: </label>
             <input name="fav" id="fav" />
             <button id="submitFav">Add Chapter</button>
         </div>
