--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,10 +49,13 @@
     </header>
     <main>
         <div class="block hero" id="hero">
-            <picture id="heroPhoto"> <img src="images/hero-base.jpg" alt="Chamber members in meeting" sizes="50ww"
+            <picture id="heroPhoto"> 
+                <img src="images/hero-base.jpg" alt="Chamber members in meeting" 
+                            width="100%"
                     srcset="images/hero-small.jpg 370w, 
                             images/hero-medium.jpg 820w, 
                             images/hero-large.jpg 1000w,"
+                            sizes="(max-width: 320px) 370px, (max-width: 820px) 800px, 1020px"
                             >
             </picture>
         <div class="block hero" id="hero">
