--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,21 +49,14 @@
     </header>
     <main>
         <div class="block hero" id="hero">
-            <picture id="heroPhoto"> 
-                <img src="images/hero-base.jpg" alt="Chamber members in meeting" 
-                            width="100%"
-                    srcset="images/hero-small.jpg 370w, 
-                            images/hero-medium.jpg 820w, 
-                            images/hero-large.jpg 1000w,"
-                            sizes="(max-width: 320px) 370px, (max-width: 820px) 800px, 1020px"
-                            >
-            </picture>
-        <div class="block hero" id="hero">
-            <picture id="heroPhoto"> 
-                <img src="images/hero-base.jpg"
-        <div class="block hero">
-            <h2>Welcome to the <span>MainLand Valley</span></h2>
-            <button>Join the Chamber</button>
+            <picture id="heroPhoto">
+                <source media="(min-width: 1000px)" srcset="images/hero-large.jpg">
+                <source media="(min-width: 600px)" srcset="images/hero-medium.jpg">
+                <source media="(min-width: 300px)" srcset="images/hero-small.jpg">
+                 <img src="images/hero-base.jpg" alt="Chamber members in meeting">
+             </picture>
+            <h2>Welcome to the <br/><span>MainLand Valley</span></h2>
+            <button id="join-btn">Join the Chamber</button>
         </div>
         <div class="block event sub">
             <h2>Ribbon Cutting</h2>
@@ -73,7 +66,7 @@
         <div class="block weather sub">
             <h2>Weather</h2>
             <img id="icon" src="images/weather.png" alt="weather icon" loading="lazy">
-            <p><span id="temp"></span>°C</p>
+            <h3><span id="temp"></span>°C</h3>
             <hr>
             <p id="icon-desc"></p>
             <p id="chill-output"></p>
@@ -139,7 +132,7 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/windchill.js"</script>
+    <script src="js/windchill.js"></script>
 </body>
-
+  
 </html>
