--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li>Lesson 04: <a href="chamber/index.html" target="_blank">Chamber Home Page Build</a></li>
           <li>Lesson 05: <a href="book-of-mormon/bom.html" target="_blank">Book of Mormon</a> | <a href="chamber/index.html" target="_blank">Chamber Home Page Continued</a></li>
           <li>Lesson 06: <a href="chamber/index.html" target="_blank">Responsive Design</a></li>
-          <li>Lesson 07: <a href="lazyload/lazyload.html" target="_blank">Lazy Load</a> | <a href="" target="_blank">Discover Page</a></li>
+          <li>Lesson 07: <a href="lesson7/lazyload/lazyload.html" target="_blank">Lazy Load</a> | <a href="" target="_blank">Discover Page</a></li>
           <li>Lesson 08: <a href="">Title</a></li>
           <li>Lesson 09: <a href="">Title</a></li>
           <li>Lesson 10: <a href="">Title</a></li>
