--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,10 +36,11 @@
         </button>
         <nav>
             <ul id="navUl">
-                <li><a href="#">Discover</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
         <div id="header-date">
