--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,66 +46,14 @@
         <div id="header-date">
             <!-- JS! -->
         </div>
-        <div class="banner hide"><p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p></div>
+    <div class="banner hide"><p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p></div>
     </header>
     <main>
-        <div class="block hero" id="hero">
-            <picture id="heroPhoto">
-                <source media="(min-width: 1000px)" srcset="images/hero-large.jpg">
-                <source media="(min-width: 600px)" srcset="images/hero-medium.jpg">
-                <source media="(min-width: 300px)" srcset="images/hero-small.jpg">
-                 <img src="images/hero-base.jpg" alt="Chamber members in meeting">
-             </picture>
-            <h2>Welcome to the <br/><span>MainLand Valley</span></h2>
-            <button id="join-btn">Join the Chamber</button>
-        </div>
-        <div class="block event sub">
-            <h2>Ribbon Cutting</h2>
-            <h3>Mays Place</h3>
-            <p>Join us for the grand opening of Mays Place, Thursday at 5:00p.m</p>
-        </div>
-        <div class="block weather sub">
-            <h2>Weather</h2>
-            <img id="icon" src="images/weather.png" alt="weather icon" loading="lazy">
-            <h3><span id="temp"></span>°C</h3>
-            <hr>
-            <p id="icon-desc"></p>
-            <p id="chill-output"></p>
-            <p>Wind Speed: <span id="speed"></span>km/h</p>
-            <p>Wind Chill:<span>N/A</span></p>
-        </div>
-        <div class="block join">
-            <button>Join Us!</button>
-            <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
-        </div>
-        <div class="block news sub">
-            <h2>News Release</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla doloribus, eveniet eius sapiente, corporis
-                delectus amet, minima provident voluptas harum adipisci est labore veritatis sed assumenda dolor. Voluptatem ea
-                nostrum, dolores ipsam .
-            </p>
-        </div>
-        <div class="placeholder-spotlights" id="spotlights">
-            <div class="spotlight">
-                <h2>Whiz Tech</h2>
-                <img src="images/wizTech.jpg" alt="Whiz Tech logo">
-                <hr>
-                <p>info@whizTech.com</p>
-                <p>+234 123 -1234 | Website</p>
+        <div class="main-area">
+            <div class="directory-container">
+                
             </div>
-            <div class="spotlight">
-                <h2>Jays Health</h2>
-                <img src="images/jayhealth.png" alt="Health logo">
-                <hr>
-                <p>info@jayshealth.com</p>
-                <p>+234 123 -1234 | Website</p>
-            </div>
-            <div class="spotlight spot-3" id="spot-3">
-                <h2>Mays Place</h2>
-                <img src="images/mays.jpg" alt="food logo">
-                <hr>
-                <p>info@maysplace.com</p>
-                <p>+234 123 -1234 | Website</p></div>
+            <h4 class="last-visit abel-text">Last Visit: <span id="visit-string"></span></h4>
         </div>
     </main>
     <footer>
@@ -133,7 +81,7 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/windchill.js"></script>
+    <script src="js/directory.js"></script>
 </body>
-  
+
 </html>
