--- a/lesson-2/design-principles.html
+++ b/lesson-2/design-principles.html
@@ -60,5 +60,10 @@
     </main>
     <footer class="footer-grid"">
         <!-- JS! -->
+        &copy; 2022 .:|:. Godwin Iyip .:|:. Nigeria
+    <p>Last Updated: <span id="currentdate"></span></p>
     </footer>
-    <script src=" js/main.js"> </script> </body> </html>
+    <script src="js/currentdate.js"></script> 
+</body> 
+
+</html>
