--- a/chamber/join.html
+++ b/chamber/join.html
@@ -118,6 +118,9 @@
     </footer>
     <script src="js/main.js"></script>
     <script src="js/windchill.js" defer></script>
+    <script>
+        hiddenInput.setAttribute("value", `${curDay()}, ${curDayofMonth} ${curMonth()} ${curYear} | ${curHour}:${curMinute}:${curSecond}`)
+    </script>
 </body>
 
 </html>
