--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>Lesson 06: <a href="chamber/index.html" target="_blank">Responsive Design</a></li>
           <li>Lesson 07: <a href="lesson-7/lazyload/lazyload.html" target="_blank">Lazy Load</a> | <a href="chamber/discover.html" target="_blank">Discover Page</a></li>
           <li>Lesson 08: <a href="lesson-8/tablebuild.html" target="_blank">Table Build</a>| <a href="chamber/join.html" target="_blank">Join Page</a></li>
-          <li>Lesson 09: <a href="lesson-9/index.html" target="_blank">Prophets Page</a></li>
+          <li>Lesson 09: <a href="lesson-9/index.html" target="_blank">Prophets Page</a> | <a href="chamber/directory.html" target="_blank">Directory Page</a> </li>
           <li>Lesson 10: <a href="">Title</a></li>
           <li>Lesson 11: <a href="">Title</a></li>
         </ul>
