--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,6 +69,7 @@
             <img id="icon" src="images/weather.png" alt="weather icon" loading="lazy">
             <h3><span id="temp"></span>°C</h3>
             <hr>
+            <p id="location-weather"></p>
             <p id="icon-desc"></p>
             <p id="chill-output"></p>
             <p>Wind Speed: <span id="speed"></span>km/h</p>
