--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,11 +36,11 @@
         </button>
         <nav>
             <ul id="navUl">
-                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <div id="header-date">
@@ -57,7 +57,7 @@
                  <img src="images/hero-base.jpg" alt="Chamber members in meeting">
              </picture>
             <h2>Welcome to the <br/><span>MainLand Valley</span></h2>
-            <button id="join-btn">Join the Chamber</button>
+            <a href="join.html" id="join-btn">Join the Chamber</a>
         </div>
         <div class="block event sub">
             <h2>Ribbon Cutting</h2>
@@ -73,7 +73,7 @@
             <p id="icon-desc"></p>
             <p id="chill-output"></p>
             <p>Wind Speed: <span id="speed"></span>km/h</p>
-            <p>Wind Chill:<span>N/A</span></p>
+            
         </div>
         <div class="block join">
             <button>Join Us!</button>
@@ -81,10 +81,7 @@
         </div>
         <div class="block news sub">
             <h2>News Release</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla doloribus, eveniet eius sapiente, corporis
-                delectus amet, minima provident voluptas harum adipisci est labore veritatis sed assumenda dolor. Voluptatem ea
-                nostrum, dolores ipsam .
-            </p>
+            <p>The CBN's economic report for the month of February 2022, noted that the naira exchange rate at the I&E window remained relatively stable in the review period despite the upscaling of cyclical and structural demand factors amidst foreign exchange supply constraints.
         </div>
         <div class="placeholder-spotlights" id="spotlights">
             <div class="spotlight">
@@ -120,6 +117,8 @@
                 <span id="email">info@MainLandValley.org</span>
                 <span id="phone">+(234) 809 733 5444</span>
                 <span id="map">📍 Location Map</span>
+                <span class="last-visit abel-text">Last Visit: <span id="visit-string"></span></span>
+            </div>
             </div>
         </div>
         <hr>
@@ -134,7 +133,9 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/windchill.js"></script>
+    
+    <script src="js/intersectionobserver.js"></script>
+    <script src="js/indexExtra.js"></script>
 </body>
   
 </html>
