--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li>Lesson 08: <a href="lesson-8/tablebuild.html" target="_blank">Table Build</a>| <a href="chamber/join.html" target="_blank">Join Page</a></li>
           <li>Lesson 09: <a href="lesson-9/index.html" target="_blank">Prophets Page</a> | <a href="chamber/directory.html" target="_blank">Directory Page</a> </li>
           <li>Lesson 10: <a href="lesson-10/weather-api.html" target="_blank">Weather API</a> | <a href="chamber/index.html" target="_blank">Weather API (Updated</a></li>
-          <li>Lesson 11: <a href="">Title</a></li>
+          <li>Lesson 11: <a href="chamber/index.html" target="_blank">Completed Chamber Site</a></li>
         </ul>
       </nav>
       <p>
