--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -5,30 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="description" content="Island Of victoria chamber of commerce Discover page">
-    <title>Island Of Victoria</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta property="description" content="MainLand Valley chamber of commerce home page">
+    <title>MainLand Valley</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="images/hd4/1.png" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Inconsolata:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Satisfy&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="header-grid">
-        <div class="logo-info"><img class="logo-img" src="images/icon.webp" alt="island of victoria chamber logo">
+        <div class="logo-info"><img class="logo-img" src="images/hd4/1.webp" alt="MainLand Valley chamber logo">
             <div id="name">
-                <h1>ISLAND OF VICTORIA</h1>
+                <h1>MainLand Valley</h1>
                 <h2>Chamber of Commerce</h2>
             </div>
         </div>
         <div class="social-links">
-            <a href="www.facebook.com"><img src="images/facebook.png" alt="facebook icon"></a>
-            <a href="www.twitter.com"><img src="images/twitter.png" alt="Twitter icon"></a>
+            <a href="https://www.linkedin.com/in/godwin-iyip/" target="_blank"><img src="images/linkedin.jpg" alt="linkedin icon"></a>
+            <a href="https://mobile.twitter.com/IyipGodwin/" target="_blank"><img src="images/twitter.png" alt="Twitter icon"></a>
         </div>
         <button id="nav-btn"><span>&#9776;</span><span>&#10005;</span></button>
         <nav>
@@ -50,16 +50,16 @@
         <div class="contact-main-area">
             <h1 class="abel-text direct-info">Contact Us</h1>
             <div class="abel-text contact-info">
-                <h2>ISLAND OF VICTORIA Chamber</h2>
-                <span>565 2nd, Victoria Island, Lagos. 10231</span>
-                <span>info@iovnigeria.org</span>
-                <span>+(234) 811 888 1888</span>
+                <h2>MainLand Valley Chamber</h2>
+                <span>No. 22, Mosa fun-eto Street, Oke-Ata, Abeokuta, Ogun State 10231</span>
+                <span>info@MainLandValley.org</span>
+                <span>+(234) 809 733 5444</span>
                 <h3>Board of Directors</h3>
-                <span>Olamilekan k. Ajibola | kelajibola@gmail.com</span>
-                <span>Albert Einstein | noemail@iovnigeria.com</span>
+                <span>Godwin Iyip | godwiniyip@gmail.com</span>
+                <span>Albert Einstein | noemail@MainLandValley.org</span>
                 <span>John Doe | someone@gmail.com</span>
                 <h3>Complaints and enquires</h3>
-                <span>enquire@iovnigeria.org</span>
+                <span>enquire@MainLandValley.org</span>
                 <h3>Maps</h3>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15858.940814117766!2d3.4131896272059103!3d6.428055375587872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf53280e7648d%3A0x4d01e5de6b847fe5!2sVictoria%20Island%2C%20Lagos!5e0!3m2!1sen!2sng!4v1656600487888!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
