--- a/chamber/join.html
+++ b/chamber/join.html
@@ -38,9 +38,9 @@
             <ul id="navUl">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a class="active" href="join.html">Join</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <div id="header-date">
@@ -52,11 +52,11 @@
     </header>
     <main>
         <div class="main-area main-join-area">
-        <h1 class="abel-text">Join us at Island of Victoria!</h1>
+        <h1 class="abel-text">Join us at MainLand Valley!</h1>
         <p class="abel-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur provident voluptatibus nisi unde necessitatibus totam nemo laboriosam, natus perferendis at inventore fuga reprehenderit voluptatum! Hic quam est saepe delectus aperiam?
+            Our strength at the MainLand Valley is in our members. And with all the benefits we offer from connections, business advisory services, Networking Opportunities, discounts for participation at the International Trade Fair, and a lot of business development services, It's a win-win situation. Help us grow as we help you grow.
         </p>
-        <form class="abel-text form" method="GET" action="thanks.html">
+        <form class="abel-text form" method="GET" action="thankyou.html">
             <fieldset>
                 <legend>Basic Information</legend>
                 <label class="block-text">First Name<span class="hy">*</span>
