--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,10 +34,10 @@
         <nav>
             <ul id="navUl">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="discover.html">Discover</a></li>
+                <li><a class="active" href="discover.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="directory.html ">Directory</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <div id="header-date">
