--- a/chamber/messaged.html
+++ b/chamber/messaged.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="description" content="MainLand Valley chamber of commerce home page">
-    <title>MainLand Valley</title>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="shortcut icon" type="image/png" href="images/hd4/1.png" />
-    <link rel="stylesheet" href="css/normalize.css">
+    <meta property="description" content="Island Of victoria chamber of commerce home page">
+    <title>MainLand VALLEY CHAMBER</title>
+    <link rel="shortcut icon" type="image/png" href="images/icon.png" />
+    <link rel="icon" href="favicon.ico" type="image/">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Satisfy&family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Inconsolata:wght@300&display=swap">
 </head>
 
 <body>
     <header class="header-grid">
-        <div class="logo-info"><img class="logo-img" src="images/hd4/1.webp" alt="MainLand Valley chamber logo">
+        <div class="logo-info"><img class="logo-img" src="images/hd4/1.png" alt="MainLand Valley chamber logo">
             <div id="name">
                 <h1>MainLand Valley</h1>
                 <h2>Chamber of Commerce</h2>
@@ -39,23 +39,29 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a class="active" href="directory.html">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <div id="header-date">
             <!-- JS! -->
         </div>
-    <div class="banner hide"><p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p></div>
-    </header>
-    <main>
-        <div class="main-area">
-            <div class="directory-container">
-                
-            </div>
-            <h4 class="last-visit abel-text">Last Visit: <span id="visit-string"></span></h4>
+        <div class="banner hide">
+            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
-    </main>
+    </header>
+
+    <main id="discovermain">
+        <section class="thanks">
+          <h3>Thank You for your feedback</h3>
+          <p>
+            We have recieved your message and will get back to you in two (2) business days, please vist our social media pages to keep in touch with the latest. <br>
+            Thanks
+          </p>
+        </section>
+      </main>
+
+
     <footer>
         <div class="first-half">
             <div class="first-half-1">
@@ -67,6 +73,8 @@
                 <span id="email">info@MainLandValley.org</span>
                 <span id="phone">+(234) 809 733 5444</span>
                 <span id="map">📍 Location Map</span>
+                <span class="last-visit abel-text">Last Visit: <span id="visit-string"></span></span>
+            </div>
             </div>
         </div>
         <hr>
@@ -81,7 +89,9 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/directory.js"></script>
+    
+    <script src="js/intersectionobserver.js"></script>
+    <script src="js/indexExtra.js"></script>
 </body>
 
 </html>
