--- a/chamber/index.html
+++ b/chamber/index.html
@@ -133,9 +133,9 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-    
     <script src="js/intersectionobserver.js"></script>
     <script src="js/indexExtra.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
   
 </html>
